--- a/todos-app/index.html
+++ b/todos-app/index.html
@@ -10,7 +10,12 @@
 
   </head>
   <body>
-    <div id="app" class="container"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- <div id="app" class="container"></div> -->
+    <todo-form></todo-form>
+    <hr>
+    <todo-table></todo-table>
+    <!-- <script type="module" src="/src/main.js"></script> -->
+    <script type="module" src="/src/components/todo-table.element.js"></script>
+    <script type="module" src="/src/components/todo-form.element.js"></script>
   </body>
 </html>
